[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Spinner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/red_ready.png" type="Texture" id=3]
[ext_resource path="res://assets/yellow_ready.png" type="Texture" id=4]
[ext_resource path="res://assets/black_ready.png" type="Texture" id=5]
[ext_resource path="res://scripts/SpeedBar.gd" type="Script" id=6]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.215686, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="SpinnerP1" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 1000 )
rotation = 3.14159

[node name="SpinnerP2" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 280 )

[node name="Control" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
margin_top = 630.0
margin_right = 720.0
margin_bottom = 650.0
custom_styles/panel = SubResource( 1 )

[node name="P1" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="btnRed" type="TextureButton" parent="Control/P1"]
margin_left = 620.0
margin_top = 650.0
margin_right = 920.0
margin_bottom = 950.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )

[node name="btnYellow" type="TextureButton" parent="Control/P1"]
margin_left = 620.0
margin_top = 735.0
margin_right = 920.0
margin_bottom = 1035.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="btnBlack" type="TextureButton" parent="Control/P1"]
margin_left = 620.0
margin_top = 820.0
margin_right = 920.0
margin_bottom = 1120.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )

[node name="Speed" type="ProgressBar" parent="Control/P1"]
margin_left = 80.0
margin_top = 650.0
margin_right = 710.0
margin_bottom = 730.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/P1"]
margin_left = 0.567932
margin_top = 650.116
margin_right = 720.568
margin_bottom = 770.116
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.215686, 0.0235294, 0.0235294, 1 )
text = "0"
align = 1

[node name="Msg" type="Label" parent="Control/P1"]
margin_left = 90.0
margin_top = 755.0
margin_right = 619.0
margin_bottom = 804.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.215686, 0.0235294, 0.0235294, 1 )
align = 1

[node name="P2" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="btnRed" type="TextureButton" parent="Control/P2"]
margin_left = 100.0
margin_top = 630.0
margin_right = 400.0
margin_bottom = 930.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )

[node name="btnYellow" type="TextureButton" parent="Control/P2"]
margin_left = 100.0
margin_top = 545.0
margin_right = 400.0
margin_bottom = 845.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="btnBlack" type="TextureButton" parent="Control/P2"]
margin_left = 100.0
margin_top = 460.0
margin_right = 400.0
margin_bottom = 760.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )

[node name="Speed" type="ProgressBar" parent="Control/P2"]
margin_left = 640.0
margin_top = 630.0
margin_right = 1270.0
margin_bottom = 710.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/P2"]
margin_left = 720.282
margin_top = 628.401
margin_right = 1440.28
margin_bottom = 748.401
rect_rotation = 180.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.215686, 0.0235294, 0.0235294, 1 )
text = "0"
align = 1

[node name="Msg" type="Label" parent="Control/P2"]
margin_left = 632.718
margin_top = 524.452
margin_right = 1161.72
margin_bottom = 573.452
rect_rotation = 180.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.215686, 0.0235294, 0.0235294, 1 )
align = 1

[node name="CountDown" type="Timer" parent="."]

[connection signal="block" from="." to="SpinnerP2" method="_on_Main_block"]
[connection signal="block" from="." to="SpinnerP1" method="_on_Main_block"]
[connection signal="unlock" from="." to="SpinnerP2" method="_on_Main_unlock"]
[connection signal="unlock" from="." to="SpinnerP1" method="_on_Main_unlock"]
[connection signal="inStart" from="SpinnerP1" to="." method="_on_SpinnerP1_inStart"]
[connection signal="limit" from="SpinnerP1" to="." method="_on_SpinnerP1_limit"]
[connection signal="speedCount" from="SpinnerP1" to="Control/P1/Speed" method="_on_Spinner_speedCount"]
[connection signal="inStart" from="SpinnerP2" to="." method="_on_SpinnerP2_inStart"]
[connection signal="limit" from="SpinnerP2" to="." method="_on_SpinnerP2_limit"]
[connection signal="speedCount" from="SpinnerP2" to="Control/P2/Speed" method="_on_Spinner_speedCount"]
[connection signal="pressed" from="Control/P1/btnRed" to="SpinnerP1" method="_on_btnRed_pressed"]
[connection signal="pressed" from="Control/P1/btnYellow" to="SpinnerP1" method="_on_btnYellow_pressed"]
[connection signal="pressed" from="Control/P1/btnBlack" to="SpinnerP1" method="_on_btnBlack_pressed"]
[connection signal="pressed" from="Control/P2/btnRed" to="SpinnerP2" method="_on_btnRed_pressed"]
[connection signal="pressed" from="Control/P2/btnYellow" to="SpinnerP2" method="_on_btnYellow_pressed"]
[connection signal="pressed" from="Control/P2/btnBlack" to="SpinnerP2" method="_on_btnBlack_pressed"]
[connection signal="timeout" from="CountDown" to="." method="_on_CountDown_timeout"]
